changed logo src

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="header section-1">
       <header class="head">
         <div class="head-container">       
-          <div class="img"> <img class="logo" src="https://www.svgrepo.com/show/183955/alloy-wheel-wheel.svg" alt="Logo"> </div>
+          <div class="img"> <img class="logo" src="../images/logo.png" alt="Logo"> </div>
           <div class="nav-link">
             <div class="link container"><a href="">About</a></div>  <!--link-->
             <div class="link container"><a href="">Pricing</a></div> <!--link-->
