--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="intro-p">This website features a selection of premium German automotive brands celebrated worldwide for their excellence and craftsmanship</p>
         <button class="button intro-btn" type="button">Sign up</button>
       </section>
-      <div><img class="intro-img"src="https://images.pexels.com/photos/5423333/pexels-photo-5423333.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="racer"></div>
+      <div><img class="intro-img"src="../images/motorist.jpg" alt="racer"></div>
     </section>
 
     <section class="main-info section-3">
@@ -49,22 +49,22 @@
         <div class="card-2 cards">
           <div class="brand-container">
             <img class="brand" src="https://i.pinimg.com/236x/38/4c/89/384c89de3e784a46b2a9c5cfee1a0b3b.jpg" alt="BMW logo"> 
-            <img class="brand-hover" src="https://i.postimg.cc/c40W1tnh/bmw-m-series-1-logo-svgrepo-com.png" alt="BMW M logo">
+            <img class="brand-hover" src="../images/bmw-m-logo.png" alt="BMW M logo">
           </div>
           <p class="p">Explore BMW</p>
         </div>
 
         <div class="card-3 cards">
           <div class="brand-container">
-            <img class="brand" src="https://i.postimg.cc/9QBrFj0R/mercedes-benz-2-logo-svgrepo-com.png" alt="Mercedes logo">
-            <img class="brand-hover" src="https://i.postimg.cc/dVJVfS6q/amg-logo-svgrepo-com.png" alt="Mercedes AMG logo">
+            <img class="brand" src="../images/mercedes-logo.png" alt="Mercedes logo">
+            <img class="brand-hover" src="../images/amg-logo.png" alt="Mercedes AMG logo">
           </div>  
           <p class="p">Explore Mercedes</p>
         </div>
 
         <div class="card-4 cards">
           <div class="brand-container">
-            <img class="brand" src="https://i.postimg.cc/RVXkMs9C/volkswagen-3-logo-svgrepo-com.png" alt="Volkswagen logo">
+            <img class="brand" src="../images/volkswagen-logo.png" alt="Volkswagen logo">
             <img class="brand-hover" src="https://i.pinimg.com/564x/0c/39/5f/0c395f3cdff80a04d22782a19f1fc0a1.jpg" alt="Volkswagen R-line logo">
           </div>
           <p class="p">Explore Volkswagen</p>
