--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
         <div class="card-3 cards">
           <div class="brand-container">
-            <img class="brand" src="../images/mercedes-logo.png" alt="Mercedes logo">
-            <img class="brand-hover" src="../images/amg-logo.png" alt="Mercedes AMG logo">
+            <img class="brand" src="images/mercedes-logo.png" alt="Mercedes logo">
+            <img class="brand-hover" src="images/amg-logo.png" alt="Mercedes AMG logo">
           </div>  
           <p class="p">Explore Mercedes</p>
         </div>
