--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section class="header section-1">
       <header class="head">
         <div class="head-container">       
-          <div class="img"> <img class="logo" src="../images/logo.png" alt="Logo"> </div>
+          <div class="img"> <img class="logo" src="images/logo.png" alt="Logo"> </div>
           <div class="nav-link">
             <div class="link container"><a href="">About</a></div>  <!--link-->
             <div class="link container"><a href="">Pricing</a></div> <!--link-->
@@ -32,7 +32,7 @@
         <p class="intro-p">This website features a selection of premium German automotive brands celebrated worldwide for their excellence and craftsmanship</p>
         <button class="button intro-btn" type="button">Sign up</button>
       </section>
-      <div><img class="intro-img"src="../images/motorist.jpg" alt="racer"></div>
+      <div><img class="intro-img"src="images/motorist.jpg" alt="racer"></div>
     </section>
 
     <section class="main-info section-3">
@@ -49,7 +49,7 @@
         <div class="card-2 cards">
           <div class="brand-container">
             <img class="brand" src="https://i.pinimg.com/236x/38/4c/89/384c89de3e784a46b2a9c5cfee1a0b3b.jpg" alt="BMW logo"> 
-            <img class="brand-hover" src="../images/bmw-m-logo.png" alt="BMW M logo">
+            <img class="brand-hover" src="images/bmw-m-logo.png" alt="BMW M logo">
           </div>
           <p class="p">Explore BMW</p>
         </div>
@@ -64,7 +64,7 @@
 
         <div class="card-4 cards">
           <div class="brand-container">
-            <img class="brand" src="../images/volkswagen-logo.png" alt="Volkswagen logo">
+            <img class="brand" src="images/volkswagen-logo.png" alt="Volkswagen logo">
             <img class="brand-hover" src="https://i.pinimg.com/564x/0c/39/5f/0c395f3cdff80a04d22782a19f1fc0a1.jpg" alt="Volkswagen R-line logo">
           </div>
           <p class="p">Explore Volkswagen</p>
