--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <script>
           document.write(new Date().getFullYear())
         </script>
-        Nelson Maluleke
+        Sebola Machethe
       </p>
       <a class="git" href="https://github.com/Nelson-Maluleke" target="_blank"> <!-- monitor-->
       <i class="fa-brands fa-github"></i></a>
